<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDA14"
    android:padding="@dimen/_16sdp"
    tools:context=".HomeScreenFragment">

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/bungee_regular"
        android:includeFontPadding="false"
        android:shadowColor="#312E2F"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="8"
        android:text="@string/home"
        android:textAllCaps="true"
        android:textColor="#FFF4F9"
        android:textFontWeight="400"
        android:textSize="@dimen/_40ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@null"
        android:contentDescription="@string/settings_button"
        android:scaleType="centerInside"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@+id/tvHomeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHomeTitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="@color/black"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/settingsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvHomeTitle"
        app:layout_constraintTop_toTopOf="@+id/tvProject"
        app:layout_constraintVertical_bias="0.0" >

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_background" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_compact_rounded_regular"
        android:text="@string/shimeji_project"
        android:textAllCaps="true"
        android:textColor="#3A3A3A"
        android:textFontWeight="500"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeTitle" />

    <ImageButton
        android:id="@+id/squareButton"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/square_vector"
        app:layout_constraintBottom_toBottomOf="@+id/xButton"
        app:layout_constraintEnd_toStartOf="@+id/lineButton"
        app:layout_constraintTop_toTopOf="@+id/xButton" />

    <Button
        android:id="@+id/lineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/image_button_border"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="_"
        android:textFontWeight="400"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="@+id/xButton"
        app:layout_constraintEnd_toStartOf="@+id/xButton"
        app:layout_constraintTop_toTopOf="@+id/xButton" />

    <Button
        android:id="@+id/xButton"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/transparent"
        android:background="@drawable/image_button_border"
        app:icon="@drawable/x_vector"
        app:iconSize="@dimen/_12sdp"
        android:padding="0dp"
        android:gravity="center"
        app:iconTint="#FFFFFF"
        app:strokeWidth="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvProject"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/tvProject" />

    <TextView
        android:id="@+id/turnOnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/sf_mono_regular"
        android:lineHeight="@dimen/_20sdp"
        android:text="@string/turn_on_shimeji"
        android:textAllCaps="true"
        android:textFontWeight="400"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/tvProject"
        app:layout_constraintTop_toBottomOf="@+id/tvProject" />

    <TextView
        android:id="@+id/shimejiOnScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/sf_mono_regular"
        android:lineHeight="@dimen/_20sdp"
        android:text="@string/shimeji_on_screen"
        android:textAllCaps="true"
        android:textFontWeight="400"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@+id/turnOnText"
        app:layout_constraintTop_toBottomOf="@+id/turnOnText" />


    <Switch
        android:id="@+id/checkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        app:layout_constraintBottom_toBottomOf="@+id/turnOnText"
        app:layout_constraintEnd_toEndOf="@+id/xButton"
        app:layout_constraintTop_toTopOf="@+id/turnOnText"
        app:thumbTint="@null"
        app:trackTint="@null" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:boxBackgroundColor="#FFFFFF"
        app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
        app:boxCornerRadiusBottomStart="@dimen/_12sdp"
        app:boxCornerRadiusTopEnd="@dimen/_12sdp"
        app:boxCornerRadiusTopStart="@dimen/_12sdp"
        app:boxStrokeColor="#3A3A3A"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:boxStrokeWidthFocused="@dimen/_1sdp"
        app:endIconDrawable="@drawable/down_arrow"
        app:endIconTint="@color/csk_500"
        app:layout_constraintEnd_toEndOf="@+id/checkButton"
        app:layout_constraintStart_toStartOf="@+id/shimejiOnScreenText"
        app:layout_constraintTop_toBottomOf="@+id/shimejiOnScreenText">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@null"
            android:fontFamily="@font/sf_compact_rounded_regular"
            android:includeFontPadding="false"
            android:inputType="none"
            android:popupBackground="@drawable/dropdown_box"
            android:text="One at random"
            android:textFontWeight="400"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/adjust_shimeji"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_compact_rounded_regular"
        android:textFontWeight="400"
        app:icon="@drawable/adjust_icon"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/_8sdp"
        android:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/black"
        app:cornerRadius="@dimen/_12sdp"
        app:strokeWidth="@dimen/_1sdp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>